# timesheet-api

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: python-tests.yml  security-scan.yml
app/: database.py  main.py
app/repositories/: __init__.py  employee_repository.py  timesheet_repository.py
app/routers/: __init__.py  employee_routes.py  ocr_routes.py  timesheet_routes.py
app/schemas/: employee.py  errors.py  pdf.py  timesheet.py
app/services/: __init__.py  employee_service.py  pdf_service.py  timesheet_service.py
app/services/llm/: client.py  config.py  ocr_service.py
app/tests/: conftest.py  test_employee_endpoints.py  test_employee_service.py  test_llm_service.py  test_main.py  test_pdf_endpoint.py  test_pdf_service.py  test_timesheet_endpoints.py  test_timesheet_service.py
app/tests/postman/: Timesheet_API_Environment.postman_environment.json  Timesheet_API_Test_Documentation.md  Timesheet_API_Tests.postman_collection.json
app/tests/routers/: test_timesheet_endpoints.py
app/tests/services/: test_llm_service.py
docs/: 001-ocr-pdf.md  002-timesheets-prd.md
