[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timesheet-api"
version = "0.1.0"
description = "A minimal FastAPI application"
authors = [
    {name = "Andre Tan", email = "tanandre93@gmail.com"},
]
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn[standard]>=0.23.2",
    "python-multipart>=0.0.6",
    "pypdf>=5.6.0",
    "litellm>=1.8.0",
    "pydantic>=2.3.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "httpx>=0.24.1",
    "aiosqlite>=0.19.0",
]
requires-python = ">=3.9"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.24.1",
    "black>=23.7.0",
    "isort>=5.12.0",
    "ruff>=0.0.286",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B"]
ignore = [] 